# docs/swagger.json
@@ -4,7 +4,7 @@
     ],
     "swagger": "2.0",
     "info": {
-        "title": "Electronic notifications",
+        "title": "Game Evolution",
         "contact": {},
         "version": "1.0"
     },
@@ -13,14 +13,14 @@
     "paths": {
         "/api/cards": {
             "get": {
-                "description": "Возвращает всех доуступных получателей с опциональной фильтрацией по ФИО",
+                "description": "Возвращает всех доуступных карты с опциональной фильтрацией по ФИО",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "Получатели"
+                    "карты"
                 ],
-                "summary": "Получить всех получателей",
+                "summary": "Получить всех карты",
                 "parameters": [
                     {
                         "type": "string",
@@ -39,18 +39,18 @@
                 }
             },
             "post": {
-                "description": "Добавить нового получателя",
+                "description": "Добавить нового карты",
                 "consumes": [
                     "multipart/form-data"
                 ],
                 "tags": [
-                    "Получатели"
+                    "карты"
                 ],
-                "summary": "Добавить получателя",
+                "summary": "Добавить карты",
                 "parameters": [
                     {
                         "type": "file",
-                        "description": "Изображение получателя",
+                        "description": "Изображение карты",
                         "name": "image",
                         "in": "formData"
                     },
@@ -92,18 +92,18 @@
         },
         "/api/cards/{id}": {
             "get": {
-                "description": "Возвращает более подробную информацию об одном получателе",
+                "description": "Возвращает более подробную информацию об одной карте",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "Получатели"
+                    "карты"
                 ],
-                "summary": "Получить одного получателя",
+                "summary": "Получить одного карты",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "id получателя",
+                        "description": "id карты",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -119,7 +119,7 @@
                 }
             },
             "put": {
-                "description": "Изменить данные полей о получателе",
+                "description": "Изменить данные полей о карте",
                 "consumes": [
                     "multipart/form-data"
                 ],
@@ -127,13 +127,13 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Получатели"
+                    "карты"
                 ],
-                "summary": "Изменить получателя",
+                "summary": "Изменить карты",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Идентификатор получателя",
+                        "description": "Идентификатор карты",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -158,7 +158,7 @@
                     },
                     {
                         "type": "file",
-                        "description": "Изображение получателя",
+                        "description": "Изображение карты",
                         "name": "image",
                         "in": "formData"
                     },
@@ -172,15 +172,15 @@
                 "responses": {}
             },
             "delete": {
-                "description": "Удаляет получателя по id",
+                "description": "Удаляет карты по id",
                 "tags": [
-                    "Получатели"
+                    "карты"
                 ],
-                "summary": "Удалить получателя",
+                "summary": "Удалить карты",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "id получателя",
+                        "description": "id карты",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -195,18 +195,18 @@
         },
         "/api/cards/{id}/add_to_turn": {
             "post": {
-                "description": "Добавить выбранного получателя в черновик уведомления",
+                "description": "Добавить выбранную карту в черновик хода",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "Получатели"
+                    "карты"
                 ],
-                "summary": "Добавить в уведомление",
+                "summary": "Добавить в ход",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "id получателя",
+                        "description": "id карты",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -303,20 +303,20 @@
                 }
             }
         },
-        "/api/turns/delete_recipient/{id}": {
+        "/api/turns/delete_card/{id}": {
             "delete": {
-                "description": "Удалить получателя из черновово ходы",
+                "description": "Удалить карты из черновово ходы",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "Ходы"
                 ],
-                "summary": "Удалить получателя из черновово ходы",
+                "summary": "Удалить карты из черновово ходы",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "id получателя",
+                        "description": "id карты",
                         "name": "id",
                         "in": "path",
                         "required": true
